Fix the model code generator so the code is more deterministic
Update code generated with the new model generator

Update SQL schema